--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -168,13 +168,33 @@ on:
       - 'tracking-rules/server/**.yml'
 
 jobs:
-  update-and-commit:
+  initialize-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.parse_json.outputs.matrix }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Load Tracking Plans Configuration
+        id: parse_json
+        run: |
+          MATRIX=$(jq -c '[.plans[] | {name, path, secret: .prod_secret}]' config/tracking-plans-config.json)
+          echo "::set-output name=matrix::$MATRIX"
+
+  update-and-generate-markdown:
+    needs: initialize-matrix
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        tracking_plan: ${{ fromJson(needs.initialize-matrix.outputs.matrix) }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 1  # Fetch only the latest commit
+          fetch-depth: 10  # Ensure enough history for detecting changes
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -184,51 +204,46 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Load Tracking Plans Configuration
-        id: parse_json
-        run: |
-          MATRIX=$(jq -c '[.plans[] | {name, path, secret: .prod_secret}]' config/tracking-plans-config.json)
-          echo "Tracking Plans to Process: $MATRIX"
-          echo "::set-output name=matrix::$MATRIX"
+      - name: Pull latest changes
+        run: git pull origin main
 
-      - name: Process Tracking Plans Sequentially
+      - name: Update Tracking Plan
         env:
           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
-          SECRETS_JSON: ${{ toJson(secrets) }}  # Convert secrets to JSON so we can look them up dynamically
+          SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+          PLAN_DIR: tracking-rules/${{ matrix.tracking_plan.path }}
         run: |
-          MATRIX='${{ steps.parse_json.outputs.matrix }}'
-          echo "Processing tracking plans..."
+          echo "Updating tracking plan for ${{ matrix.tracking_plan.name }}"
+          node scripts/update-tracking-plan.js || echo "No changes detected"
 
-          echo "$MATRIX" | jq -c '.[]' | while read plan; do
-            NAME=$(echo "$plan" | jq -r '.name')
-            PATH=$(echo "$plan" | jq -r '.path')
-            SECRET_KEY=$(echo "$plan" | jq -r '.secret')
+      - name: Save Tracking Plan
+        env:
+          SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+          SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+          PLAN_DIR: plans/prod/${{ matrix.tracking_plan.path }}
+        run: |
+          echo "Saving tracking plan for ${{ matrix.tracking_plan.name }}"
+          node scripts/save-tracking-plan.js || echo "No changes detected"
 
-            echo "📌 Updating tracking plan: $NAME"
-
-            # Retrieve the secret value dynamically
-            SEGMENT_TRACKING_PLAN_ID=$(echo "$SECRETS_JSON" | jq -r --arg key "$SECRET_KEY" '.[$key]')
-
-            export SEGMENT_TRACKING_PLAN_ID
-            export PLAN_DIR="tracking-rules/$PATH"
-
-            # Run update scripts
-            node scripts/update-tracking-plan.js || echo "No changes detected for $NAME"
-            node scripts/save-tracking-plan.js || echo "No changes detected for $NAME"
-
-            # Generate Markdown
-            node scripts/render-tp.js "$NAME Tracking Plan" "plans/prod/$PATH/current-rules.json" "docs/${PATH}_tracking_plan.md" || echo "No changes detected for $NAME"
-
-            echo "✅ Finished processing $NAME"
-          done
+      - name: Generate Markdown
+        run: |
+          echo "Generating markdown for ${{ matrix.tracking_plan.name }}"
+          node scripts/render-tp.js "${{ matrix.tracking_plan.name }} Tracking Plan" "plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json" "docs/${{ matrix.tracking_plan.path }}_tracking_plan.md" || echo "No changes detected"
 
       - name: Commit and Push Updates
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
+          git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
 
-          git add plans/prod/ docs/
-          git commit -m "Updated tracking plans and generated markdown [skip ci]" || echo "No changes to commit"
+          # Ensure latest changes before pushing
+          git pull --rebase origin main || git pull --autostash origin main
 
-          git pull --rebase --autostash origin main
-          git push origin main
+          # Retry push up to 3 times if it fails
+          for i in {1..3}; do
+            git push origin main && break
+            echo "Push failed. Retrying in 5 seconds... (Attempt $i/3)"
+            sleep 5
+            git pull --rebase --autostash origin main
+          done
