new yaml for prod

--- a/.github/workflows/update-prod-tracking-plans.yml
+++ b/.github/workflows/update-prod-tracking-plans.yml
@@ -71,92 +71,6 @@
 #           git push origin main
         
 
-# name: Update Production Tracking Plans and Generate Markdown
-
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - 'tracking-rules/javascript/**.yml'
-#       - 'tracking-rules/server/**.yml'
-
-# jobs:
-#   initialize-matrix:
-#     runs-on: ubuntu-latest
-#     outputs:
-#       matrix: ${{ steps.parse_json.outputs.matrix }}
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-
-#       - name: Load Tracking Plans Configuration
-#         id: parse_json
-#         run: |
-#           MATRIX=$(jq -c '[.plans[] | {name, path, secret: .prod_secret}]' config/tracking-plans-config.json)
-#           echo "::set-output name=matrix::$MATRIX"
-
-#   update-and-generate-markdown:
-#     needs: initialize-matrix
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         tracking_plan: ${{ fromJson(needs.initialize-matrix.outputs.matrix) }}
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-#         with:
-#           fetch-depth: 10  # Ensure enough history for detecting changes
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: '16'
-
-#       - name: Install dependencies
-#         run: npm install
-
-#       - name: Pull latest changes
-#         run: git pull origin main
-
-#       - name: Update Tracking Plan
-#         env:
-#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
-#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
-#           PLAN_DIR: tracking-rules/${{ matrix.tracking_plan.path }}
-#         run: |
-#           echo "Updating tracking plan for ${{ matrix.tracking_plan.name }}"
-#           node scripts/update-tracking-plan.js || echo "No changes detected"
-
-#       - name: Save Tracking Plan
-#         env:
-#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
-#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
-#           PLAN_DIR: plans/prod/${{ matrix.tracking_plan.path }}
-#         run: |
-#           echo "Saving tracking plan for ${{ matrix.tracking_plan.name }}"
-#           node scripts/save-tracking-plan.js || echo "No changes detected"
-
-#       - name: Generate Markdown
-#         run: |
-#           echo "Generating markdown for ${{ matrix.tracking_plan.name }}"
-#           node scripts/render-tp.js "${{ matrix.tracking_plan.name }} Tracking Plan" "plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json" "docs/${{ matrix.tracking_plan.path }}_tracking_plan.md" || echo "No changes detected"
-          
-#       - name: Commit and Push Updates
-#         run: |
-#           git config --global user.name "github-actions[bot]"
-#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-#           git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
-#           git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
-          
-#           # Fetch latest changes & merge automatically
-#           git pull --rebase origin main || git pull --autostash origin main
-          
-#           # Push changes
-#           git push origin main
-
 name: Update Production Tracking Plans and Generate Markdown
 
 on:
@@ -229,21 +143,107 @@ jobs:
         run: |
           echo "Generating markdown for ${{ matrix.tracking_plan.name }}"
           node scripts/render-tp.js "${{ matrix.tracking_plan.name }} Tracking Plan" "plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json" "docs/${{ matrix.tracking_plan.path }}_tracking_plan.md" || echo "No changes detected"
-
+          
       - name: Commit and Push Updates
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
           git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
-
-          # Ensure latest changes before pushing
+          
+          # Fetch latest changes & merge automatically
           git pull --rebase origin main || git pull --autostash origin main
+          
+          # Push changes
+          git push origin main
 
-          # Retry push up to 3 times if it fails
-          for i in {1..3}; do
-            git push origin main && break
-            echo "Push failed. Retrying in 5 seconds... (Attempt $i/3)"
-            sleep 5
-            git pull --rebase --autostash origin main
-          done
+# name: Update Production Tracking Plans and Generate Markdown
+
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'tracking-rules/javascript/**.yml'
+#       - 'tracking-rules/server/**.yml'
+
+# jobs:
+#   initialize-matrix:
+#     runs-on: ubuntu-latest
+#     outputs:
+#       matrix: ${{ steps.parse_json.outputs.matrix }}
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+
+#       - name: Load Tracking Plans Configuration
+#         id: parse_json
+#         run: |
+#           MATRIX=$(jq -c '[.plans[] | {name, path, secret: .prod_secret}]' config/tracking-plans-config.json)
+#           echo "::set-output name=matrix::$MATRIX"
+
+#   update-and-generate-markdown:
+#     needs: initialize-matrix
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         tracking_plan: ${{ fromJson(needs.initialize-matrix.outputs.matrix) }}
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 10  # Ensure enough history for detecting changes
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '16'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Pull latest changes
+#         run: git pull origin main
+
+#       - name: Update Tracking Plan
+#         env:
+#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+#           PLAN_DIR: tracking-rules/${{ matrix.tracking_plan.path }}
+#         run: |
+#           echo "Updating tracking plan for ${{ matrix.tracking_plan.name }}"
+#           node scripts/update-tracking-plan.js || echo "No changes detected"
+
+#       - name: Save Tracking Plan
+#         env:
+#           SEGMENT_API_KEY: ${{ secrets.SEGMENT_PUBLIC_API_TOKEN }}
+#           SEGMENT_TRACKING_PLAN_ID: ${{ secrets[matrix.tracking_plan.secret] }}
+#           PLAN_DIR: plans/prod/${{ matrix.tracking_plan.path }}
+#         run: |
+#           echo "Saving tracking plan for ${{ matrix.tracking_plan.name }}"
+#           node scripts/save-tracking-plan.js || echo "No changes detected"
+
+#       - name: Generate Markdown
+#         run: |
+#           echo "Generating markdown for ${{ matrix.tracking_plan.name }}"
+#           node scripts/render-tp.js "${{ matrix.tracking_plan.name }} Tracking Plan" "plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json" "docs/${{ matrix.tracking_plan.path }}_tracking_plan.md" || echo "No changes detected"
+
+#       - name: Commit and Push Updates
+#         run: |
+#           git config --global user.name "github-actions[bot]"
+#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+#           git add plans/prod/${{ matrix.tracking_plan.path }}/current-rules.json docs/${{ matrix.tracking_plan.path }}_tracking_plan.md
+#           git commit -m "Updated ${{ matrix.tracking_plan.name }} tracking plan rules and generated markdown [skip ci]" || echo "No changes to commit"
+
+#           # Ensure latest changes before pushing
+#           git pull --rebase origin main || git pull --autostash origin main
+
+#           # Retry push up to 3 times if it fails
+#           for i in {1..3}; do
+#             git push origin main && break
+#             echo "Push failed. Retrying in 5 seconds... (Attempt $i/3)"
+#             sleep 5
+#             git pull --rebase --autostash origin main
+#           done
