--- a/tracking-rules/javascript/Aubrey's_Event_1.yml
+++ b/tracking-rules/javascript/Aubrey's_Event_1.yml
@@ -6,7 +6,7 @@ rules:
     labels:
       feature: journeys
     properties:
-      prop22:
-        description: this is a single property
+      first_name:
+        description: this is the first name
         type: string
         required: true
