--- a/config/tracking-plans-config.json
+++ b/config/tracking-plans-config.json
@@ -1,16 +1,16 @@
 {
     "plans": [
       {
-        "name": "JavaScript",
-        "path": "javascript",
-        "dev_secret": "DEV_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT",
-        "prod_secret": "PROD_SEGMENT_TRACKING_PLAN_ID_JAVASCRIPT"
+        "name": "Webflow",
+        "path": "webflow",
+        "dev_secret": "DEV_SEGMENT_TRACKING_PLAN_ID_WEBFLOW",
+        "prod_secret": "PROD_SEGMENT_TRACKING_PLAN_ID_WEBFLOW"
       },
       {
-        "name": "Server",
-        "path": "server",
-        "dev_secret": "DEV_SEGMENT_TRACKING_PLAN_ID_SERVER",
-        "prod_secret": "PROD_SEGMENT_TRACKING_PLAN_ID_SERVER"
+        "name": "Designer",
+        "path": "designer",
+        "dev_secret": "DEV_SEGMENT_TRACKING_PLAN_ID_DESIGNER",
+        "prod_secret": "PROD_SEGMENT_TRACKING_PLAN_ID_DESIGNER"
       }
     ]
   }
