--- a/tracking-rules/webflow/test.yml
+++ b/tracking-rules/webflow/test.yml
@@ -1,4 +1,9 @@
-rules:
+# make invalid yaml as test
+rules: {}
+  - asdf
+  sadf
+  dfsafdsadfsa
+  123233
   - key: test
     type: TRACK
     description: test
