--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Validate YAML files in tracking-rules for webflow and designer
         env:
-          LINT_OPTIONS: {extends: relaxed, rules: {line-length: {max: 120}}}
+          LINT_OPTIONS: '{extends: relaxed, rules: {line-length: {max: 120}}}'
         run: |
           yamllint -d "$LINT_OPTIONS" tracking-rules/webflow/.
           yamllint -d "$LINT_OPTIONS" tracking-rules/designer/.
